--- a/app/src/main/res/layout/activity_common_alert.xml
+++ b/app/src/main/res/layout/activity_common_alert.xml
@@ -15,10 +15,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:gravity="center_horizontal"
-        android:textSize="16dp"
-        android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:textSize="16sp" />
 
     <Button
         android:id="@+id/btnOk"
@@ -31,5 +28,6 @@
         android:background="@drawable/button_background"
         android:text="@android:string/ok"
         android:textColor="#ffffff"
-        android:textSize="20dp" />
+        android:textStyle="bold"
+        android:textSize="20sp" />
 </LinearLayout>
