--- a/app/src/main/res/layout/activity_startup.xml
+++ b/app/src/main/res/layout/activity_startup.xml
@@ -1,119 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:background="@drawable/blank_background"
     tools:context=".StartupActivity">
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="144dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:orientation="vertical">
 
-        <ProgressBar
-            android:id="@+id/startupProgress"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="0dp"
-            android:fadingEdge="horizontal"
-            android:indeterminate="true"
-            android:indeterminateOnly="true" />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
+            android:orientation="horizontal"
             android:id="@+id/logged_in_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:gravity="center"
             app:layout_constraintTop_toTopOf="parent">
 
-            <ImageView
-                android:id="@+id/logged_in_state"
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:contentDescription="@string/state_indicator"
-                app:layout_constraintEnd_toStartOf="@+id/logged_in"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_check_box_empty_24dp" />
+                android:layout_height="wrap_content">
+
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/login_load_id"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    app:lottie_fileName="loading.json"
+                    app:lottie_loop="true"
+                    app:lottie_speed="2"
+                    app:lottie_autoPlay="true"/>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:id="@+id/img_logged_id"
+                    android:layout_height="wrap_content"/>
+
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/logged_in"
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
-                android:text="@string/logged_in"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                android:text="@string/logged_in" />
+        </LinearLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
+            android:orientation="horizontal"
             android:id="@+id/superdrive_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent">
+            android:gravity="center">
 
-            <ImageView
-                android:id="@+id/superdrive_state"
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:contentDescription="@string/state_indicator"
-                app:layout_constraintEnd_toStartOf="@+id/superdrive"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_check_box_empty_24dp" />
+                android:layout_height="wrap_content">
+
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/super_driver_loading_id"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    app:lottie_fileName="loading.json"
+                    app:lottie_loop="true"
+                    app:lottie_speed="2"
+                    app:lottie_autoPlay="true"/>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:id="@+id/img_super_id"
+                    android:layout_height="wrap_content"/>
+
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/superdrive"
                 android:layout_width="wrap_content"
+                android:textStyle="bold"
+                android:textColor="@android:color/black"
+                android:textAlignment="center"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
-                android:text="@string/superdrive_installed"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                android:text="@string/superdrive_installed" />
+        </LinearLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
+            android:orientation="horizontal"
             android:id="@+id/message_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent">
+            android:gravity="center"
+            android:layout_marginTop="8dp">
 
-            <ImageView
-                android:id="@+id/message_state"
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:contentDescription="@string/state_indicator"
-                app:layout_constraintEnd_toStartOf="@+id/message"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_check_box_empty_24dp" />
+                android:layout_height="wrap_content">
+
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/messaging_loading_id"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    app:lottie_fileName="loading.json"
+                    app:lottie_loop="true"
+                    app:lottie_speed="2"
+                    app:lottie_autoPlay="true"/>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:id="@+id/img_message_id"
+                    android:layout_height="wrap_content"/>
+
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
-                android:text="@string/messaging_installed"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textStyle="bold"
+                android:text="@string/messaging_installed"/>
+        </LinearLayout>
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
