--- a/app/src/main/res/layout/activity_vpidle.xml
+++ b/app/src/main/res/layout/activity_vpidle.xml
@@ -1,52 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/vpfristpage"
+    android:background="@drawable/blank_background"
     android:weightSum="100"
     tools:context="com.mimik.smarthome.userinterface.visitorPanel.VPIdle">
 
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    <ProgressBar
+        android:id="@+id/callProgress"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="8dp"
+        android:layout_height="wrap_content"
+        />
 
-        <Button
-            android:id="@+id/buttonScan"
-            android:layout_width="249dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:text="@string/scan_for_devices" />
-
-        <ProgressBar
-            android:id="@+id/callProgress"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="117dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="499dp"
-            android:layout_height="159dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="3dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp">
-
-        </androidx.recyclerview.widget.RecyclerView>
+    <Button
+        android:id="@+id/buttonScan"
+        android:layout_width="249dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="8dp"
+        android:text="@string/scan_for_devices" />
 
         <LinearLayout
             android:layout_width="1267dp"
+            android:visibility="gone"
             android:layout_height="265dp"
             android:orientation="horizontal">
 
@@ -106,7 +88,6 @@
                     android:id="@+id/bunlock"
                     android:layout_width="match_parent"
                     android:layout_height="151dp"
-                    android:background="@drawable/transparent"
                     app:srcCompat="@android:color/transparent" />
             </LinearLayout>
 
@@ -125,7 +106,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="172dp"
                     app:srcCompat="@android:color/transparent"
-                    android:background="@drawable/transparent"
                     tools:visibility="visible" />
             </LinearLayout>
 
@@ -176,7 +156,4 @@
                 tools:clickable="true" />
 
         </LinearLayout>
-
-    </LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
