--- a/app/src/main/res/layout/activity_vpidle.xml
+++ b/app/src/main/res/layout/activity_vpidle.xml
@@ -169,5 +169,26 @@
         android:id="@+id/image_logo_visitor_id"
         android:layout_height="wrap_content"/>
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:layout_width="0dp"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_fileName="focuse.json"
+        android:id="@+id/anim_focuse_id"
+        app:lottie_speed="1"
+        android:layout_alignTop="@id/image_logo_visitor_id"
+        android:layout_alignBottom="@id/image_logo_visitor_id"
+        android:layout_centerInParent="true"
+        android:layout_alignLeft="@id/image_logo_visitor_id"
+        android:layout_alignRight="@id/image_logo_visitor_id"
+        android:layout_height="0dp"/>
+
+    <include
+        android:id="@+id/include_visitor_id"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        layout="@layout/visitor_simple"
+        android:layout_height="match_parent"/>
+
 
 </RelativeLayout>
