--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#8BC34A</color>
 
     <color name="black_overlay">#66000000</color>
-
+    <color name="focuse_color">#AD288CF8</color>
     <color name="splash_background">#6e5773</color>
     <color name="text_color_default">#505050</color>
 
