--- a/app/src/main/res/layout/visitor_simple.xml
+++ b/app/src/main/res/layout/visitor_simple.xml
@@ -1,15 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="480dp"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="120dp"
+        android:weightSum="1"
+        android:orientation="vertical"
+        android:layout_height="180dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:gravity="start"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="250dp"
+                android:id="@+id/buzz_layout_id"
+                android:layout_margin="20dp"
+                android:background="@drawable/background_edittext"
+                android:layout_height="55dp">
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:layout_width="match_parent"
+                    android:textColor="@android:color/black"
+                    android:textAlignment="center"
+                    android:textStyle="bold"
+                    android:enabled="false"
+                    android:inputType="phone"
+                    android:maxLines="1"
+                    android:maxLength="8"
+                    android:id="@+id/txt_buzz_num_id"
+                    android:layout_margin="5dp"
+                    android:drawableRight="@drawable/ic_dashboard_black_24dp"
+                    android:layout_height="match_parent"/>
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <Button
+                android:id="@+id/btn_show_username_id"
+                android:layout_marginBottom="-12dp"
+                android:layout_marginTop="-12dp"
+                android:layout_marginRight="50dp"
+                android:text="Unit or Buzz Number"
+                android:textStyle="bold"
+                android:backgroundTint="@color/button_color"
+                android:elevation="5dp"
+                android:textColor="@android:color/white"
+                android:textSize="20sp"
+                android:background="@drawable/background_button"
+                android:layout_alignBottom="@id/buzz_layout_id"
+                android:layout_alignTop="@id/buzz_layout_id"
+                android:layout_width="0dp"
+                android:layout_alignLeft="@id/buzz_layout_id"
+                android:layout_alignRight="@id/buzz_layout_id"
+                android:layout_height="0dp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:gravity="start"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="250dp"
+                android:id="@+id/password_layout_id"
+                android:layout_margin="20dp"
+                android:background="@drawable/background_edittext"
+                android:layout_height="55dp">
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:layout_width="match_parent"
+                    android:textColor="@android:color/black"
+                    android:textAlignment="center"
+                    android:textStyle="bold"
+                    android:enabled="false"
+                    android:inputType="phone"
+                    android:maxLines="1"
+                    android:maxLength="8"
+                    android:id="@+id/txt_password_id"
+                    android:layout_margin="5dp"
+                    android:drawableRight="@drawable/ic_lock_black_24dp"
+                    android:layout_height="match_parent"/>
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <Button
+                android:id="@+id/btn_show_password_id"
+                android:layout_marginBottom="-12dp"
+                android:layout_marginTop="-12dp"
+                android:layout_marginRight="50dp"
+                android:text="@string/password"
+                android:textStyle="bold"
+                android:backgroundTint="@color/button_color"
+                android:elevation="5dp"
+                android:textColor="@android:color/white"
+                android:textSize="20sp"
+                android:background="@drawable/background_button"
+                android:layout_alignBottom="@id/password_layout_id"
+                android:layout_alignTop="@id/password_layout_id"
+                android:layout_width="0dp"
+                android:layout_alignLeft="@id/password_layout_id"
+                android:layout_alignRight="@id/password_layout_id"
+                android:layout_height="0dp" />
+        </RelativeLayout>
+    </LinearLayout>
 
     <com.airbnb.lottie.LottieAnimationView
         android:layout_width="140dp"
         app:lottie_fileName="setting.json"
         app:lottie_loop="true"
-        app:lottie_speed="1"
+        app:lottie_speed="0.75"
         app:lottie_autoPlay="true"
         android:id="@+id/anim_setting_id"
         android:layout_alignParentBottom="true"
