--- a/app/src/main/res/layout/activity_hpidle.xml
+++ b/app/src/main/res/layout/activity_hpidle.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,6 +11,7 @@
     tools:context="com.mimik.smarthome.userinterface.homePanel.HPIdle">
 
     <LinearLayout
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -105,8 +107,8 @@
         </LinearLayout>
 
     </LinearLayout>
-
     <ImageButton
+        android:visibility="gone"
         android:id="@+id/bSetting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -118,10 +120,10 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.844"
         app:srcCompat="@mipmap/setting03" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/FSettin"
         android:layout_width="984dp"
+        android:visibility="gone"
         android:layout_height="622dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -150,10 +152,10 @@
         </androidx.viewpager.widget.ViewPager>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/FNotification"
         android:layout_width="182dp"
+        android:visibility="gone"
         android:layout_height="500dp"
         android:layout_marginStart="9dp"
         android:layout_marginTop="300dp"
@@ -165,8 +167,7 @@
         app:layout_constraintHorizontal_bias="0.12"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.434"
-        tools:visibility="visible">
+        app:layout_constraintVertical_bias="0.434">
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/messageGroup"
@@ -178,14 +179,13 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
     <LinearLayout
         android:id="@+id/FAdminLogin"
         android:layout_width="350dp"
         android:layout_height="164dp"
         android:background="@android:color/white"
         android:orientation="vertical"
-        android:visibility="invisible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -277,5 +277,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
