--- a/app/src/main/res/layout/visitor_simple.xml
+++ b/app/src/main/res/layout/visitor_simple.xml
@@ -12,7 +12,7 @@
         android:layout_marginLeft="120dp"
         android:weightSum="1"
         android:orientation="vertical"
-        android:layout_height="180dp">
+        android:layout_height="wrap_content">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -61,6 +61,13 @@
                 android:layout_height="0dp" />
         </RelativeLayout>
 
+        <Button
+            android:text="@string/call_unit"
+            android:layout_marginLeft="20dp"
+            android:backgroundTint="@color/colorPrimaryDark"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:gravity="start"
@@ -107,6 +114,14 @@
                 android:layout_alignRight="@id/password_layout_id"
                 android:layout_height="0dp" />
         </RelativeLayout>
+
+        <Button
+            android:text="@string/open_door"
+            android:layout_marginLeft="20dp"
+            android:backgroundTint="@color/colorPrimaryDark"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
     </LinearLayout>
 
     <com.airbnb.lottie.LottieAnimationView
