--- a/app/src/main/res/layout/visitor_simple.xml
+++ b/app/src/main/res/layout/visitor_simple.xml
@@ -136,4 +136,25 @@
         android:layout_margin="20dp"
         android:layout_height="140dp"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:id="@+id/txt_time_id"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="25dp"
+        android:textColor="@android:color/black"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:id="@+id/txt_date_id"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="25dp"
+        android:textColor="@android:color/black"
+        android:textStyle="bold"
+        android:layout_below="@id/txt_time_id"
+        android:layout_height="wrap_content"/>
+
 </RelativeLayout>
