GUI of Home panel created !

--- a/app/src/main/res/layout/activity_hpidle.xml
+++ b/app/src/main/res/layout/activity_hpidle.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/hpfristpage"
+    android:background="@drawable/blank_background"
     android:orientation="horizontal"
     android:weightSum="100"
     tools:context="com.mimik.smarthome.userinterface.homePanel.HPIdle">
@@ -278,6 +278,17 @@
 
     </LinearLayout>
 
+    <ImageView
+        android:src="@drawable/mimik_logo_small2"
+        android:layout_width="wrap_content"
+        android:layout_margin="10dp"
+        android:layout_height="wrap_content"/>
+
+    <include
+        android:layout_width="match_parent"
+        layout="@layout/home_simple"
+        android:layout_height="match_parent"/>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</RelativeLayout>
