--- a/app/src/main/res/layout/home_simple.xml
+++ b/app/src/main/res/layout/home_simple.xml
@@ -5,35 +5,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <ImageView
-        android:src="@drawable/accept_call"
-        android:layout_width="240dp"
         android:id="@+id/img_accept_call_id"
-        android:layout_centerInParent="true"
-        android:layout_height="240dp"/>
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_alignParentBottom="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:layout_toEndOf="@id/img_reject_call_id"
+        android:src="@drawable/accept_call" />
 
     <ImageView
         android:id="@+id/img_reject_call_id"
-        android:layout_width="140dp"
-        android:layout_height="140dp"
-        android:layout_alignBottom="@+id/img_accept_call_id"
-        android:layout_marginEnd="-71dp"
-        android:layout_marginBottom="-52dp"
-        android:layout_toStartOf="@+id/img_accept_call_id"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="2dp"
+        android:foreground="?android:attr/selectableItemBackground"
         android:src="@drawable/reject_call" />
 
     <ImageView
         android:id="@+id/img_open_door_id"
-        android:layout_width="140dp"
-        android:layout_height="140dp"
-        android:layout_alignBottom="@+id/img_accept_call_id"
-        android:layout_marginStart="-81dp"
-        android:layout_marginEnd="-71dp"
-        android:layout_marginBottom="-45dp"
-        android:layout_toEndOf="@+id/img_accept_call_id"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@id/img_accept_call_id"
         android:src="@drawable/open_door" />
+
     <com.airbnb.lottie.LottieAnimationView
-        android:layout_width="150dp"
+        android:layout_width="300dp"
         app:lottie_fileName="setting.json"
         app:lottie_loop="true"
         app:lottie_speed="0.75"
@@ -41,9 +42,6 @@
         android:id="@+id/anim_setting_h_id"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_margin="20dp"
-        android:layout_height="150dp"/>
-
-
+        android:layout_height="300dp"/>
 
 </RelativeLayout>
