--- a/app/src/main/res/layout/visitor_simple.xml
+++ b/app/src/main/res/layout/visitor_simple.xml
@@ -7,125 +7,104 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="480dp"
+        android:layout_width="876dp"
+        android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="120dp"
-        android:weightSum="1"
+        android:layout_marginLeft="130dp"
         android:orientation="vertical"
-        android:layout_height="wrap_content">
+        android:weightSum="1">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:gravity="start"
+            android:orientation="horizontal"
             android:layout_height="wrap_content">
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="250dp"
-                android:id="@+id/buzz_layout_id"
-                android:layout_margin="20dp"
-                android:background="@drawable/background_edittext"
-                android:layout_height="55dp">
+            <TextView
+                android:background="@drawable/text_box"
+                android:layout_width="330dip"
+                android:id="@+id/back_buzz_id"
+                android:layout_height="110dip"/>
 
-                <androidx.appcompat.widget.AppCompatEditText
-                    android:layout_width="match_parent"
-                    android:textColor="@android:color/black"
-                    android:textAlignment="center"
-                    android:textStyle="bold"
-                    android:enabled="false"
-                    android:inputType="phone"
-                    android:maxLines="1"
-                    android:maxLength="8"
-                    android:id="@+id/txt_buzz_num_id"
-                    android:layout_margin="5dp"
-                    android:drawableRight="@drawable/ic_dashboard_black_24dp"
-                    android:layout_height="match_parent"/>
-            </com.google.android.material.textfield.TextInputLayout>
+            <TextView
+                android:textAlignment="center"
+                android:gravity="center_vertical"
+                android:textSize="28sp"
+                android:text="@string/unit_or_buzz_number"
+                android:layout_width="330dip"
+                android:layout_height="110dip"/>
 
-            <Button
-                android:id="@+id/btn_show_username_id"
-                android:layout_marginBottom="-12dp"
-                android:layout_marginTop="-12dp"
-                android:layout_marginRight="50dp"
-                android:text="Unit or Buzz Number"
-                android:textStyle="bold"
-                android:backgroundTint="@color/button_color"
-                android:elevation="5dp"
-                android:textColor="@android:color/white"
-                android:textSize="20sp"
-                android:background="@drawable/background_button"
-                android:layout_alignBottom="@id/buzz_layout_id"
-                android:layout_alignTop="@id/buzz_layout_id"
-                android:layout_width="0dp"
-                android:layout_alignLeft="@id/buzz_layout_id"
-                android:layout_alignRight="@id/buzz_layout_id"
-                android:layout_height="0dp" />
+            <EditText
+                android:layout_width="350dp"
+                android:layout_height="70dp"
+                android:enabled="false"
+                android:layout_marginStart="20dp"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/back_buzz_id"
+                android:background="@drawable/shape_edittext"
+                android:textSize="24sp" />
+
+            <TextView
+                android:layout_width="330dp"
+                android:drawableLeft="@drawable/ic_dashboard_black_24dp"
+                android:layout_height="70dp"
+                android:paddingStart="5dp"
+                android:elevation="15dp"
+                android:id="@+id/txt_buzz_num"
+                android:foreground="?attr/actionBarItemBackground"
+                android:layout_marginStart="20dp"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/back_buzz_id"
+                android:background="@drawable/shape_covertext"
+                android:textSize="24sp" />
+
         </RelativeLayout>
 
-        <Button
-            android:text="@string/call_unit"
-            android:layout_marginLeft="20dp"
-            android:backgroundTint="@color/colorPrimaryDark"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
         <RelativeLayout
             android:layout_width="match_parent"
-            android:gravity="start"
             android:layout_height="wrap_content">
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="250dp"
-                android:id="@+id/password_layout_id"
-                android:layout_margin="20dp"
-                android:background="@drawable/background_edittext"
-                android:layout_height="55dp">
+            <TextView
+                android:background="@drawable/text_box"
+                android:layout_width="330dip"
+                android:layout_height="110dip"/>
 
-                <androidx.appcompat.widget.AppCompatEditText
-                    android:layout_width="match_parent"
-                    android:textColor="@android:color/black"
-                    android:textAlignment="center"
-                    android:textStyle="bold"
-                    android:enabled="false"
-                    android:inputType="phone"
-                    android:maxLines="1"
-                    android:maxLength="8"
-                    android:id="@+id/txt_password_id"
-                    android:layout_margin="5dp"
-                    android:drawableRight="@drawable/ic_lock_black_24dp"
-                    android:layout_height="match_parent"/>
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <Button
-                android:id="@+id/btn_show_password_id"
-                android:layout_marginBottom="-12dp"
-                android:layout_marginTop="-12dp"
-                android:layout_marginRight="50dp"
+            <TextView
+                android:textAlignment="center"
+                android:gravity="center_vertical"
+                android:textSize="28sp"
+                android:id="@+id/back_pass_id"
                 android:text="@string/password"
-                android:textStyle="bold"
-                android:backgroundTint="@color/button_color"
-                android:elevation="5dp"
-                android:textColor="@android:color/white"
-                android:textSize="20sp"
-                android:background="@drawable/background_button"
-                android:layout_alignBottom="@id/password_layout_id"
-                android:layout_alignTop="@id/password_layout_id"
-                android:layout_width="0dp"
-                android:layout_alignLeft="@id/password_layout_id"
-                android:layout_alignRight="@id/password_layout_id"
-                android:layout_height="0dp" />
-        </RelativeLayout>
+                android:layout_width="330dip"
+                android:layout_height="110dip"/>
 
-        <Button
-            android:text="@string/open_door"
-            android:layout_marginLeft="20dp"
-            android:backgroundTint="@color/colorPrimaryDark"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            <EditText
+                android:layout_width="350dp"
+                android:layout_height="70dp"
+                android:enabled="false"
+                android:layout_marginStart="20dp"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/back_pass_id"
+                android:background="@drawable/shape_edittext"
+                android:textSize="24sp" />
+
+            <TextView
+                android:layout_width="330dp"
+                android:layout_height="70dp"
+                android:layout_marginStart="20dp"
+                android:foreground="?attr/actionBarItemBackground"
+                android:paddingStart="5dp"
+                android:id="@+id/txt_password"
+                android:drawableLeft="@drawable/ic_lock_black_24dp"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/back_pass_id"
+                android:background="@drawable/shape_covertext"
+                android:textSize="24sp" />
+        </RelativeLayout>
 
     </LinearLayout>
 
     <com.airbnb.lottie.LottieAnimationView
-        android:layout_width="140dp"
+        android:layout_width="300dp"
         app:lottie_fileName="setting.json"
         app:lottie_loop="true"
         app:lottie_speed="0.75"
@@ -134,7 +113,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_margin="20dp"
-        android:layout_height="140dp"/>
+        android:layout_height="300dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -144,7 +123,7 @@
         android:layout_marginTop="25dp"
         android:textColor="@android:color/black"
         android:textStyle="bold"
-        android:textSize="20sp"
+        android:textSize="24sp"
         android:layout_height="wrap_content"/>
 
     <TextView
@@ -152,6 +131,7 @@
         android:id="@+id/txt_date_id"
         android:layout_alignParentEnd="true"
         android:layout_marginRight="25dp"
+        android:textSize="20sp"
         android:textColor="@android:color/black"
         android:textStyle="bold"
         android:layout_below="@id/txt_time_id"
