--- a/app/src/main/res/layout/activity_v_setting.xml
+++ b/app/src/main/res/layout/activity_v_setting.xml
@@ -15,39 +15,16 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 
-    <com.google.android.material.bottomappbar.BottomAppBar
-        android:layout_width="match_parent"
-        android:backgroundTint="@color/colorPrimary"
-        android:layout_gravity="bottom"
-        app:fabAlignmentMode="end"
-        android:id="@+id/bottom_appbar_id"
-        app:fabCradleVerticalOffset="10dp"
-        app:fabCradleRoundedCornerRadius="15dp"
-        android:layout_height="wrap_content">
+
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:layout_width="match_parent"
             app:menu="@menu/bottom_nav_menu"
             android:id="@+id/bottom_navigation_view_id"
-            app:elevation="5dp"
             android:layout_gravity="bottom"
-            app:labelVisibilityMode="auto"
             app:itemIconTint="@android:color/black"
             app:itemTextColor="@android:color/black"
-            android:background="#00FFFFFF"
-            android:layout_height="match_parent"/>
-
-    </com.google.android.material.bottomappbar.BottomAppBar>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:layout_width="wrap_content"
-        app:layout_anchor="@id/bottom_navigation_view_id"
-        app:fabCustomSize="85dp"
-        app:elevation="10dp"
-        android:id="@+id/fab_save_id"
-        android:layout_margin="8dp"
-        android:src="@drawable/ic_save_black_24dp"
-        android:layout_marginEnd="25dp"
-        android:layout_height="wrap_content"/>
+            android:background="@color/colorPrimary"
+            android:layout_height="wrap_content"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
