--- a/app/src/main/res/layout/key_generator.xml
+++ b/app/src/main/res/layout/key_generator.xml
@@ -1,6 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
+    android:layout_weight="1"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include
+        android:layout_width="0dp"
+        android:layout_weight="0.48"
+        layout="@layout/generate_part_layout"
+        android:layout_margin="15dp"
+        android:layout_height="match_parent"/>
+
+    <View
+        android:layout_width="1dp"
+        android:background="@android:color/darker_gray"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="70dp"
+        android:layout_height="match_parent"/>
+
+    <include
+        android:layout_width="0dp"
+        android:layout_weight="0.48"
+        layout="@layout/config_home_layout"
+        android:layout_margin="15dp"
+        android:layout_height="match_parent"/>
 </LinearLayout>
