Home setting GUI fixed !

--- a/app/src/main/res/layout/activity_h_setting.xml
+++ b/app/src/main/res/layout/activity_h_setting.xml
@@ -21,7 +21,7 @@
             app:tabTextColor="@android:color/black"
             app:tabMaxWidth="0dp"
             android:background="@color/colorPrimary"
-            android:id="@+id/tab_layout_id"
+            android:id="@+id/tab_layout_home_id"
             app:tabGravity="fill"
             app:tabSelectedTextColor="@color/colorPrimaryDark"
             app:tabTextAppearance="@style/MineCustomTabText"
